--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,19 +1,23 @@
-.loginWrapper {
-}
-
 .formWrapper {
 	padding: 34px 20px;
+	background-repeat: no-repeat;
+	background-size: cover;
 	background-image: linear-gradient(rgba(9, 30, 63, 0.8), rgba(9, 30, 63, 0.8)),
 		url('/pic.jpg');
 }
 
-.formFieldWrapper {
+.formWrapper .loginForm{
+	margin: 0 auto;
+	max-width: 280px;
+}
+
+.fields {
 	display: flex;
 	flex-direction: column;
 	row-gap: 20px;
 }
 
-.loginByGoogleBtn {
+.googleButton {
 	font-family: 'Roboto', sans-serif;
 	display: block;
 	min-width: 150px;
@@ -21,7 +25,7 @@
 	height: 40px;
 	font-weight: 700;
 	font-size: 16px;
-	line-height: 2.375;
+	line-height: 2.38;
 	color: #707375;
 	border: none;
 	margin-bottom: 28px;
@@ -29,7 +33,7 @@
 	background-color: #f5f7fa;
 }
 
-.form {
+.loginForm {
 	display: flex;
 	flex-direction: column;
 	label {
@@ -55,11 +59,12 @@
 			color: #a6abb9;
 		}
 	}
-	.loginBtn {
+	.loginButton {
 		height: 60px;
 		font-weight: 600;
 		font-size: 16px;
 		color: #fff;
+		margin: 20px 0 16px 0;
 		border: none;
 		background-color: #ff6b08;
 	}
@@ -72,28 +77,27 @@
 	}
 }
 
-.loginInfo {
-	padding: 18px;
+.loginQuote {
+	margin: 18px 0;
 	text-align: center;
-	.symbol {
+	.quoteMark {
 		font-family: 'Abril Fatface', sans-serif;
 		font-weight: 400;
 		font-size: 59px;
 		color: #ff6b08;
 	}
-	.loginTitle {
+	.quoteText {
 		position: relative;
 		display: block;
-		margin: 0 auto;
-		margin-top: -30px;
+		margin: -30px auto 28px auto;
 		max-width: 229px;
 		font-weight: 500;
 		font-size: 13px;
 		color: #242a37;
 		margin-bottom: 28px;
 		.quoteAuthor {
-			font-weight: 500;
 			color: #898f9f;
+			font-size: 14px;
 		}
 		&::after {
 			position: absolute;
@@ -108,22 +112,42 @@
 	}
 }
 
-.container {
-	max-width: 320px;
-	padding: 0 20px;
-	margin: 0 auto;
-}
-
 @media screen and (min-width: 768px) {
-	.container {
-		max-width: 768px;
-		padding: 0 32px;
-	}
 	.formWrapper {
-		max-width: 400px;
+		padding: 65px 20px;
+		.loginForm{
+			max-width: 400px;
+			padding: 40px;
+			background-color: #fff;
+			label{
+				font-weight: 500;
+				color: #898f9f;
+			}
+			.field{
+				padding-left: 12px;
+			}
+			.loginButton{
+				margin: 32px 0 20px 0;
+			}
+		}
 	}
-	.form {
-		background-color: #fff;
+	
+	
+	.loginQuote {
+		margin: 64px 0;
+		.quoteMark{
+			font-size: 69px;
+		}
+		.quoteText{
+			max-width: 526px;
+			font-size: 24px;
+			line-height: 1.58;
+			margin-bottom: 32px;
+			&::after{
+				width: 150px;
+				font-size: 20px;
+			}
+		}
 	}
 }
 
@@ -131,5 +155,24 @@
 	.container {
 		max-width: 1280px;
 		padding: 0 16px;
+		margin: 0 auto;
 	}
+	.loginWrapper{
+		display: grid;
+		grid-template-columns: 549px 1fr;
+	}
+	.formWrapper{
+		padding: 180px 0;
+	}
+	.loginQuote{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		.quoteText{
+			max-width: 397px;
+			line-height: 1.67;
+		}
+	}
+	
 }
